--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
           chmod 755 external/bin/gcc external/bin/g++
 
-          echo '::add-path::${{ github.workspace }}/external/bin'
+          echo "${{ github.workspace }}/external/bin" >> "${GITHUB_PATH}"
 
       # - name: Install dependencies (macOS)
       #   if: runner.os == 'macOS'
@@ -87,12 +87,12 @@ jobs:
           7z x "external/mingw$arch.7z" -oexternal/
           7z x external/windeps.zip -oexternal/dlls
 
-          echo '::add-path::${{ github.workspace }}'"/external/mingw$arch/bin"
-          echo '::add-path::${{ github.workspace }}'"/external/dlls"
+          echo "${{ github.workspace }}/external/mingw$arch/bin" >> "${GITHUB_PATH}"
+          echo "${{ github.workspace }}/external/dlls" >> "${GITHUB_PATH}"
 
       - name: Setup environment
         shell: bash
-        run: echo '::add-path::${{ github.workspace }}/nim/bin'
+        run: echo "${{ github.workspace }}/nim/bin" >> "${GITHUB_PATH}"
 
       - name: Get latest Nim commit hash
         id: versions
