--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ on: [push, pull_request]
 
 jobs:
   build:
-    # if: |
-    #   !contains(github.event.head_commit.message, "[skip ci]")
+    if: |
+      !contains(format("{0}", github.event.head_commit.message), "[skip ci]")
 
     strategy:
       fail-fast: false
