--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,14 +110,14 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.choosenim
-          key: ${{ runner.os }}-choosenim-devel-latest
+          key: ${{ runner.os }}-${{ runner.cpu }}-choosenim-${{ matrix.branch }}
 
       - name: Cache nimble
         id: cache-nimble
         uses: actions/cache@v1
         with:
           path: ~/.nimble
-          key: ${{ runner.os }}-nimble-devel-latest
+          key: ${{ runner.os }}-${{ runner.cpu }}-nimble-${{ matrix.branch }}
 
       - name: Run fusion tests
         shell: bash
