--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,19 +105,19 @@ jobs:
           no-color: true  # --noColor
           yes: true       # --yes
 
-      - name: Cache choosenim
-        id: cache-choosenim
-        uses: actions/cache@v1
-        with:
-          path: ~/.choosenim
-          key: ${{ runner.os }}-${{ runner.cpu }}-choosenim-${{ matrix.branch }}
+      # - name: Cache choosenim
+      #   id: cache-choosenim
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/.choosenim
+      #     key: ${{ runner.os }}-${{ runner.cpu }}-choosenim-${{ matrix.branch }}
 
-      - name: Cache nimble
-        id: cache-nimble
-        uses: actions/cache@v1
-        with:
-          path: ~/.nimble
-          key: ${{ runner.os }}-${{ runner.cpu }}-nimble-${{ matrix.branch }}
+      # - name: Cache nimble
+      #   id: cache-nimble
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/.nimble
+      #     key: ${{ runner.os }}-${{ runner.cpu }}-nimble-${{ matrix.branch }}
 
       - name: Run fusion tests
         shell: bash
