--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [version-1-0, version-1-2, version-1-4, devel]
+        branch: ["1.0.0", "1.2.0", "1.4.0", "devel"]
         target:
           - os: linux
             cpu: amd64
