--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: ["1.0.0", "1.2.0", "1.4.0", "devel"]
+        # branch: ["1.0.0", "1.2.0", "1.4.0", "devel"]
+        branch: ["1.0.0", "1.0.8", "1.2.0", "1.2.8", "1.4.0", "1.4.2", "devel"] # TODO: stable
         target:
           - os: linux
             cpu: amd64
