fix #68 (CI wasn't run); fix nim doc -b:js src/fusion/js/jsformdata.nim (#67)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,14 @@ on: [push, pull_request]
 
 jobs:
   build:
-    if: !contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[skip ci]')
+    if: |
+      !contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[skip ci]')
 
     strategy:
       fail-fast: false
       matrix:
-        branch: [version-1-0, version-1-2, version-1-4, devel]
+        # xxx update as needed with latest stable for each branch
+        branch: ["1.0.8", "1.2.8", "1.4.2", "devel"] # stable currentl at 1.4.2
         target:
           - os: linux
             cpu: amd64
