--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
 
       - name: Install dependencies (Linux i386)
         if: runner.os == 'Linux' && matrix.target.cpu == 'i386'
+        working-directory: ${{ github.workspace }}
         run: |
           sudo dpkg --add-architecture i386
           sudo apt-fast update -qq
@@ -75,7 +76,7 @@ jobs:
 
           chmod 755 external/bin/gcc external/bin/g++
 
-          echo "${{ github.workspace }}/external/bin" >> "${GITHUB_PATH}"
+          echo "$PWD/external/bin" >> "${GITHUB_PATH}"
 
       # - name: Install dependencies (macOS)
       #   if: runner.os == 'macOS'
@@ -83,7 +84,7 @@ jobs:
 
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
-        shell: bash
+        working-directory: ${{ github.workspace }}
         run: |
           mkdir external
           if [[ '${{ matrix.target.cpu }}' == 'amd64' ]]; then
@@ -94,13 +95,14 @@ jobs:
           curl -L "https://nim-lang.org/download/mingw$arch-6.3.0.7z" -o "external/mingw$arch.7z"
           7z x "external/mingw$arch.7z" -oexternal/
 
-          echo "${{ github.workspace }}/external/mingw$arch/bin" >> "${GITHUB_PATH}"
+          cygpath -aw "external/mingw$arch/bin" >> "${GITHUB_PATH}"
 
       - name: Setup Nim
         uses: alaviss/setup-nim@0.1.1
         with:
           path: nim
           version: ${{ matrix.branch }}
+          architecture: ${{ matrix.target.cpu }}
 
       - name: Run tests
         shell: bash
