--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,12 +108,7 @@ jobs:
       - name: Run tests
         shell: bash
         run: |
-          nimble test
-          if [[ '${{ matrix.branch }}' != 'version-1-0' ]]; then
-            nimble test --gc:orc
-            nimble test --gc:arc
-
-          fi
+          nimble testMulti
 
       - name: Build docs
         if: matrix.branch == 'devel'
